--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: George Shoemaker's Blog
 email: george.shoemaker.business@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog with two feeds.
-# baseurl: "" # the subpath of your site, e.g. /blog
-# url: "https://george-a-shoemaker.github.io/scratch-blog/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/scratch-blog" # the subpath of your site, e.g. /blog
+url: "https://george-a-shoemaker.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  george-a-shoemaker
 
