--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,18 @@
 title: George Shoemaker's Blog
 email: george.shoemaker.business@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A blog with two feeds.
+  A blog with two feeds. A blog with two feeds. Etc, etc, etc, etc, etc.
 baseurl: "/scratch-blog" # the subpath of your site, e.g. /blog
 url: "https://george-a-shoemaker.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  george-a-shoemaker
+
+# author key is used by minima, but not included in default template
+author: George Shoemaker
+
+# Custom keys
+## Adds copyright line to footer with symbol and current year
+copyright: George Shoemaker
 
 # Build settings
 markdown: kramdown
