--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: George Shoemaker's Blog
+title: George Shoemaker
 email: george.shoemaker.business@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  A blog with two feeds. A blog with two feeds. Etc, etc, etc, etc, etc.
+# description: >- # this means to ignore newlines until "baseurl:"
+  # A blog with two feeds. A blog with two feeds. Etc, etc, etc, etc, etc.
 baseurl: "/scratch-blog" # the subpath of your site, e.g. /blog
 url: "https://george-a-shoemaker.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
